added all API constraints for creating a user, domain normalization, throwing exceptions and translating into HTTP responses
