# src/main/java/com/peterstrele/trombonemaster/api/rest/GlobalExceptionHandler.java
@@ -1,0 +1,83 @@
+package com.peterstrele.trombonemaster.api.rest;
+
+import com.peterstrele.trombonemaster.application.exceptions.EmailAlreadyTakenException;
+import com.peterstrele.trombonemaster.application.exceptions.UsernameAlreadyTakenException;
+import com.peterstrele.trombonemaster.generated.model.ErrorResponse;
+import com.peterstrele.trombonemaster.generated.model.FieldError;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.RestControllerAdvice;
+
+import java.util.List;
+
+@RestControllerAdvice
+public class GlobalExceptionHandler {
+
+    @ExceptionHandler(UsernameAlreadyTakenException.class)
+    public ResponseEntity<ErrorResponse> handleUsernameAlreadyTaken(
+            UsernameAlreadyTakenException exception
+    ) {
+        ErrorResponse response = new ErrorResponse(
+                "USER_USERNAME_TAKEN",
+                exception.getMessage()
+        );
+
+        return ResponseEntity
+                .status(HttpStatus.CONFLICT)
+                .body(response);
+    }
+
+    @ExceptionHandler(EmailAlreadyTakenException.class)
+    public ResponseEntity<ErrorResponse> handleEmailAlreadyTaken(
+            EmailAlreadyTakenException exception
+    ) {
+        ErrorResponse response = new ErrorResponse(
+                "USER_EMAIL_TAKEN",
+                exception.getMessage()
+        );
+        return ResponseEntity
+                .status(HttpStatus.CONFLICT)
+                .body(response);
+    }
+
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ResponseEntity<ErrorResponse> handleValidation(
+            MethodArgumentNotValidException exception
+    ) {
+        List<FieldError> errors = exception.getBindingResult()
+                .getFieldErrors()
+                .stream()
+                .map(error -> new FieldError(
+                        error.getField(),
+                        error.getDefaultMessage()
+                ))
+                .toList();
+
+        ErrorResponse response = new ErrorResponse(
+                "VALIDATION_ERROR",
+                "Request validation failed."
+        );
+
+        response.setErrors(errors);
+
+        return ResponseEntity
+                .status(HttpStatus.BAD_REQUEST)
+                .body(response);
+    }
+
+    @ExceptionHandler(Exception.class)
+    public ResponseEntity<ErrorResponse> handleUnexpectedException(
+            Exception exception
+    ) {
+        ErrorResponse response = new ErrorResponse(
+                "INTERNAL_SERVER_ERROR",
+                "An unexpected error occurred."
+        );
+
+        return ResponseEntity
+                .status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(response);
+    }
+}
